Prevent tooltip from wrapping.

--- a/assets/patterns.css
+++ b/assets/patterns.css
@@ -68,7 +68,7 @@ body table {
 
 .tip {
     color: black;
-    width: 285px;
+    width: 300px;
     background-color: #F3EFE9;
     border:1px solid black;
     font-size:14px;
